K1J-161: Sent more data to WC to populate more events for admin info (#409)